Added: New repository.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "shpakovski"]
 	path = shpakovski
 	url = git://github.com/shpakovski/codebox_library.git
+[submodule "dehlen"]
+	path = dehlen
+	url = git://github.com/dehlen/CBXML-Library.git
