--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ablfx"]
 	path = ablfx
 	url = git://github.com/ablfx/Ablfx-CodeBox.git
+[submodule "dehlen"]
+	path = dehlen
+	url = git://github.com/dehlen/CBXML-Library.git
